[project]
name = "multi-gpu-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "pillow>=12.1.1",
    "qwen-vl-utils>=0.0.14",
    "transformers<5,>=4.56.0",
    "vllm>=0.15.1",
]


[tool.uv.pip]
only-binary = ["vllm"]
